--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -11,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.3"
   }
 }
