--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "@azure/identity": "^3.3.0",
+    "@azure/openai": "^1.0.0-beta.6",
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
